--- a/_sass/content.scss
+++ b/_sass/content.scss
@@ -25,6 +25,7 @@
       position: relative;
 
       &::before {
+        display: none;
         position: absolute;
         top: 0.1em;
         left: -1.1em;
